# opencl_fdtd

./: .flake8  .gitignore  README.md  fdtd.py  pcgen.py  pyproject.toml  requirements.txt  setup.py
fdtd/: base.py  boundary.py  simulation.py
fdtd/kernels/: common.cl  update_e.cl  update_s.cl
opencl_fdtd/: VERSION.py  __init__.py  simulation.py  test_simulation.py
opencl_fdtd/kernels/: common.cl  update_e.cl  update_h.cl  update_j.cl  update_s.cl
